fix bug - change date to string