@@ -15,11 +15,14 @@ import com.fpt.hungnm.assigmentfinal.Model.Budget;
 import com.fpt.hungnm.assigmentfinal.Model.Category;
 import com.fpt.hungnm.assigmentfinal.Model.Transaction;
 
+import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
+import java.util.Locale;
 
 public class MyDbContext extends SQLiteOpenHelper {
     private static final String TAG = "HungnmError";
@@ -27,6 +30,8 @@ public class MyDbContext extends SQLiteOpenHelper {
     private static final String TABLE_TRANSACTIONS = "transactions";
     private static final String TABLE_CATEGORY = "categories";
     private static final String TABLE_BUDGET = "budgets";
+    private static final String PATTERN = "yyyy-MM-dd";
+    private static final String PATTERN_ORIGIN = "yyyy-MM-dd HH:mm:ss";
     private static int DATABASE_VERSION = 1;
 
     public MyDbContext(@Nullable Context context) {
@@ -75,6 +80,7 @@ public class MyDbContext extends SQLiteOpenHelper {
         super.onOpen(db);
     }
 
+
     public List<Transaction> getAllTransition(){
         List<Transaction> list = new ArrayList<>();
         try{
@@ -87,13 +93,15 @@ public class MyDbContext extends SQLiteOpenHelper {
                 String categoryId = cs.getString(2);
                 String price = cs.getString(3);
                 String isIncome = cs.getString(4);
-                long createDateMillis = cs.getLong(5);
-                Date createDate = new Date(createDateMillis);
-                list.add(new Transaction(id,title,categoryId,price,isIncome,createDate));
+                String createDateStr = cs.getString(5);
+                String[] parts = createDateStr.split(" ");
+                String date = parts[0];
+                list.add(new Transaction(id,title,price,categoryId,isIncome,date));
             }
         }catch (Exception ex){
             Log.e(TAG,"MyDbContext - getAllTransition - " + ex.getMessage());
         }
+        Collections.reverse(list);
         return list;
     }
 
@@ -107,10 +115,10 @@ public class MyDbContext extends SQLiteOpenHelper {
                 int id = cs.getInt(0);
                 String title = cs.getString(1);
                 String isIncome = cs.getString(2);
-
-                long createDateMillis = cs.getLong(3);
-                Date createDate = new Date(createDateMillis);
-                list.add(new Category(id,title,isIncome,createDate));
+                String createDateStr = cs.getString(3);
+                String[] parts = createDateStr.split(" ");
+                String date = parts[0];
+                list.add(new Category(id,title,isIncome,date));
             }
         }catch (Exception ex){
             Log.e(TAG,"MyDbContext - getAllCategory - " + ex.getMessage());
@@ -131,9 +139,10 @@ public class MyDbContext extends SQLiteOpenHelper {
                 String title = cs.getString(1);
                 String isIncome = cs.getString(2);
 
-                long createDateMillis = cs.getLong(3);
-                Date createDate = new Date(createDateMillis);
-                list.add(new Category(id,title,isIncome,createDate));
+                String createDateStr = cs.getString(3);
+                String[] parts = createDateStr.split(" ");
+                String date = parts[0];
+                list.add(new Category(id,title,isIncome,date));
             }
         }catch (Exception ex){
             Log.e(TAG,"MyDbContext - getAllCategoryByType - " + ex.getMessage());
@@ -153,9 +162,10 @@ public class MyDbContext extends SQLiteOpenHelper {
                 String typeOfBudget = cs.getString(2);
                 String time = cs.getString(3);
                 String categoryId = cs.getString(4);
-                long createDateMillis = cs.getLong(5);
-                Date createDate = new Date(createDateMillis);
-                list.add(new Budget(id,title,typeOfBudget,time,categoryId,createDate));
+                String createDateStr = cs.getString(5);
+                String[] parts = createDateStr.split(" ");
+                String date = parts[0];
+                list.add(new Budget(id,title,typeOfBudget,time,categoryId,date));
             }
         }catch (Exception ex){
             Log.e(TAG,"MyDbContext - getAllBudget - " + ex.getMessage());
@@ -171,9 +181,7 @@ public class MyDbContext extends SQLiteOpenHelper {
             values.put("categoryId", transaction.getCategory());
             values.put("price", transaction.getPrice());
             values.put("isIncome", transaction.getIsIncome());
-            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-            String createDateStr = dateFormat.format(transaction.getCreateDate());
-            values.put("createDate", createDateStr);
+            values.put("createDate", transaction.getCreateDate());
             SQLiteDatabase sqLiteDatabase = getWritableDatabase();
             result = sqLiteDatabase.insert(TABLE_TRANSACTIONS,null,values);
         }catch (Exception ex){
@@ -190,10 +198,7 @@ public class MyDbContext extends SQLiteOpenHelper {
             values.put("categoryId", transaction.getCategory());
             values.put("price", transaction.getPrice());
             values.put("isIncome", transaction.getIsIncome());
-
-            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-            String createDateStr = dateFormat.format(transaction.getCreateDate());
-            values.put("createDate", createDateStr);
+            values.put("createDate", transaction.getCreateDate());
             SQLiteDatabase sqLiteDatabase = getWritableDatabase();
 
             String whereClause = "id = ?";
@@ -224,9 +229,7 @@ public class MyDbContext extends SQLiteOpenHelper {
             ContentValues values = new ContentValues();
             values.put("title", category.getTitle());
             values.put("isIncome", category.getIsIncome());
-            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-            String createDateStr = dateFormat.format(category.getCreateDate());
-            values.put("createDate", createDateStr);
+            values.put("createDate", category.getCreateDate());
             SQLiteDatabase sqLiteDatabase = getWritableDatabase();
             result = sqLiteDatabase.insert(TABLE_CATEGORY,null,values);
         }catch (Exception ex){
@@ -241,10 +244,7 @@ public class MyDbContext extends SQLiteOpenHelper {
             ContentValues values = new ContentValues();
             values.put("title", item.getTitle());
             values.put("isIncome", item.getIsIncome());
-
-            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-            String createDateStr = dateFormat.format(item.getCreateDate());
-            values.put("createDate", createDateStr);
+            values.put("createDate", item.getCreateDate());
             SQLiteDatabase sqLiteDatabase = getWritableDatabase();
 
             String whereClause = "id = ?";
@@ -277,9 +277,7 @@ public class MyDbContext extends SQLiteOpenHelper {
             values.put("typeOfBudget", budget.getTypeOfBudget());
             values.put("time", budget.getTime());
             values.put("categoryId", budget.getCategotyId());
-            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-            String createDateStr = dateFormat.format(budget.getCreateDate());
-            values.put("createDate", createDateStr);
+            values.put("createDate", budget.getCreateDate());
             SQLiteDatabase sqLiteDatabase = getWritableDatabase();
             result = sqLiteDatabase.insert(TABLE_BUDGET,null,values);
         }catch (Exception ex){
@@ -295,9 +293,7 @@ public class MyDbContext extends SQLiteOpenHelper {
             values.put("typeofbudget", item.getTypeOfBudget());
             values.put("time", item.getTime());
             values.put("categoryId", item.getCategotyId());
-            SimpleDateFormat dateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss");
-            String createDateStr = dateFormat.format(item.getCreateDate());
-            values.put("createDate", createDateStr);
+            values.put("createDate", item.getCreateDate());
             SQLiteDatabase sqLiteDatabase = getWritableDatabase();
 
             String whereClause = "id = ?";
@@ -324,11 +320,9 @@ public class MyDbContext extends SQLiteOpenHelper {
 
     public List<Transaction> getTransactionByMonth(int month){
         List<Transaction> list = new ArrayList<>();
-        LocalDate currentDate = LocalDate.now();
-        int currentYear = currentDate.getYear();
         try{
-            String selection = "strftime('%m', CreateDate) = ? AND strftime('%Y', CreateDate) = ?";
-            String[] selectionArgs = {String.format("%02d", month), String.valueOf(currentYear)};
+            String selection = "strftime('%m', CreateDate) = ?";
+            String[] selectionArgs = {String.format("%02d", month)};
             String orderBy = "CreateDate DESC";
             SQLiteDatabase st = getReadableDatabase();
             Cursor cs = st.query(TABLE_TRANSACTIONS,null,selection,selectionArgs,null,null,orderBy);
@@ -338,9 +332,10 @@ public class MyDbContext extends SQLiteOpenHelper {
                 String categoryId = cs.getString(2);
                 String price = cs.getString(3);
                 String isIncome = cs.getString(4);
-                long createDateMillis = cs.getLong(5);
-                Date createDate = new Date(createDateMillis);
-                list.add(new Transaction(id,title,categoryId,price,isIncome,createDate));
+                String createDateStr = cs.getString(5);
+                String[] parts = createDateStr.split(" ");
+                String date = parts[0];
+                list.add(new Transaction(id,title,price,categoryId,isIncome,date));
             }
         }catch (Exception ex){
             Log.e(TAG,"MyDbContext - getTransactionByDate - " + ex.getMessage());
@@ -402,9 +397,11 @@ public class MyDbContext extends SQLiteOpenHelper {
                 String categoryId = cs.getString(2);
                 String price = cs.getString(3);
                 String isIncome = cs.getString(4);
-                long createDateMillis = cs.getLong(5);
-                Date createDate = new Date(createDateMillis);
-                list.add(new Transaction(id,title,categoryId,price,isIncome,createDate));
+                String createDateStr = cs.getString(5);
+                Date date = new Date(createDateStr);
+                SimpleDateFormat outputFormat = new SimpleDateFormat(PATTERN, Locale.ENGLISH);
+                String formattedDate = outputFormat.format(date);
+                list.add(new Transaction(id,title,categoryId,price,isIncome,formattedDate));
             }
         }catch (Exception ex){
             Log.e(TAG,"MyDbContext - getTransactionByFilter - " + ex.getMessage());
@@ -412,19 +409,21 @@ public class MyDbContext extends SQLiteOpenHelper {
         return list;
     }
 
-    public Long getBalance() {
+    public Long getBalance(int month) {
         try {
-            List<Transaction> list = getAllTransition();
-            Long result = new Long(0);
-            for (Transaction item :
-                    list) {
-                if(item.getIsIncome().toString().equals("INCOME")){
-                    result = result + Long.valueOf(item.getPrice());
-                }else{
-                    result = result - Long.valueOf(item.getPrice());
+            List<Transaction> list = getTransactionByMonth(month);
+            if(list.size() != 0 ){
+                Long result = new Long(0);
+                for (Transaction item :
+                        list) {
+                    if(item.getIsIncome().toString().equals("INCOME")){
+                        result = result + Long.valueOf(item.getPrice());
+                    }else{
+                        result = result - Long.valueOf(item.getPrice());
+                    }
                 }
+                return result;
             }
-            return result;
         } catch (Exception ex) {
             Log.e(TAG, "MyDbContext - getBalance - " + ex.getMessage());
         }
